# FastInstall

./: .gitignore  CMakeLists.txt  readme.adoc
src/: const.h  install.c  install.h  main.c  manifest.c  manifest.h
src/utils/: args_util.h  color.h  log_util.c  log_util.h
